RESOLVED FIXED123674
Fix MSVC warning about unary minus operator
https://bugs.webkit.org/show_bug.cgi?id=123674
Summary Fix MSVC warning about unary minus operator
Patrick R. Gansterer
Reported 2013-11-02 10:59:49 PDT
Fix MSVC warning about unary minus operator
Attachments
Patch (2.25 KB, patch)
2013-11-02 11:03 PDT, Patrick R. Gansterer
no flags
Patrick R. Gansterer
Comment 1 2013-11-02 11:03:20 PDT
Darin Adler
Comment 2 2013-11-02 19:48:13 PDT
Comment on attachment 215817 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=215817&action=review > Source/JavaScriptCore/jit/Repatch.cpp:864 > + stubJit.loadPtr(MacroAssembler::Address(scratchGPR3, -static_cast<ptrdiff_t>(offset + sizeof(JSValue) + sizeof(void*))), scratchGPR2); > + stubJit.storePtr(scratchGPR2, MacroAssembler::Address(scratchGPR1, -static_cast<ptrdiff_t>(offset + sizeof(JSValue) + sizeof(void*)))); I think ssize_t would be better than ptrdiff_t here, but maybe Windows doesn’t even have that type.
WebKit Commit Bot
Comment 3 2013-11-02 20:15:07 PDT
Comment on attachment 215817 [details] Patch Clearing flags on attachment: 215817 Committed r158516: <http://trac.webkit.org/changeset/158516>
WebKit Commit Bot
Comment 4 2013-11-02 20:15:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.