Fix MSVC warning about unary minus operator https://bugs.webkit.org/show_bug.cgi?id=123674

Reviewed by Darin Adler.

Change some static_cast<> to silence the following warning of Microsoft compiler:
warning C4146: unary minus operator applied to unsigned type, result still unsigned

* jit/Repatch.cpp:
(JSC::emitPutTransitionStub):


Canonical link: https://commits.webkit.org/141869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158516 268f45cc-cd09-0410-ab3c-d52691b4dbfc